Made people page generic and set git to ignore codekit

--- a/people.jade
+++ b/people.jade
@@ -23,8 +23,8 @@ block content
 								.headshot.medium-4.medium-push-8.columns
 									img(src= imgdir+'UnknownStudent.jpg')
 								.medium-8.medium-pull-4.columns
-									h4 Jackie Long
-									p This is a description that Jackie writes.
+									h4 A Student.
+									p This is a description that A writes.
 									table.vcard
 										tr
 											td Class of 2018
