Made placeholders generic

--- a/people.jade
+++ b/people.jade
@@ -40,8 +40,8 @@ block content
 								.headshot.medium-4.medium-push-8.columns
 									img(src= imgdir+'UnknownStudent.jpg')
 								.medium-8.medium-pull-4.columns
-									h4 A Student
-									p This is a description that A writes.
+									h4 Z Student
+									p This is a description that Z writes.
 									table.vcard
 										tr
 											td Class of 2016
