--- a/research.jade
+++ b/research.jade
@@ -8,7 +8,7 @@ block title
 	meta(name='description',content='A quick summary of the projects going on in the Broaders lab.')
 
 block content
-	-var imgdir = "images/kb/"
+	-var imgdir = "images/res/"
 	.row
 		.large-12.columns
 			.panel
@@ -17,5 +17,8 @@ block content
 					.medium-offset-1.medium-10.columns
 						h3 Research
 						p The Broaders Lab is focused on learning more about how living cells sense and respond to their surroundings. Particularly, research is focused on disecting the ways that cells respond to the shape and chemical nature of their underlying substrata. How do these responses change between cells in isolation and cells acting as a tissue? The Broaders lab uses chemical tools to prepare precisely controlled environments that will help to answer these questions. The lessons learned from this research may reveal new insight into how multicellular organisms develop and help us to understand the rules for how cells sense, interact with, and respond to their material world. 
-						//- img(src=imgdir+'res1.jpg')
-					
+				.row
+					.large-6.columns.large-offset-1.resimg
+						img(src=imgdir+'multicellularity.png')
+					.large-4.columns.large-pull-1
+						p The process of tumorigenesis (top) can be very broadly conceptualized as a loss of multicellular behavior. Cells whose positions and roles were strictly defined and controlled become undifferentiated and start growing unrestrictedly. This transition is in some ways mirrored by the development of the slime mold Dictyostelium discoideum (bottom). This unusual organism makes the transition from unicellular to multicellular state during its normal life cycle. Using this unlikely model, we hope to learn more about how eukaryotic cells cooperate.
