--- a/people.jade
+++ b/people.jade
@@ -21,37 +21,38 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'UnknownStudent.jpg')
+									img(src= imgdir+'khich22m.jpg')
 								.medium-8.medium-pull-4.columns
-									h4 A Student.
-									p This is a description that A writes.
+									h4 Muhammadaha Areeb Khichi
+									p Areeb comes to Mount Holyoke from Lahore, Pakistan. She is researching new biocompatible polymer formulations.
 									table.vcard
 										tr
 											td Class of 2018
 										tr
-											td(colspan='3')
-												a(href='#') anemailaddress@mtholyoke.edu
+											td Major: Biochemistry
 										tr
-											td(colspan='3')
-												a(href='http://www.twitter.com/atwitter')@atwitter
+											td Minor: Mathematics
+										tr
+											td
+												a(href='mailto:khich22m@mtholyoke.edu') khich22m@mtholyoke.edu
+
 
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
 									img(src= imgdir+'UnknownStudent.jpg')
 								.medium-8.medium-pull-4.columns
-									h4 Z Student
-									p This is a description that Z writes.
+									h4 Jackie Long
+									p This is a description that Jackie will write.
 									table.vcard
 										tr
 											td Class of 2016
 										tr
-											td(colspan='3')
-												a(href='#') anemailaddress@mtholyoke.edu
+											td Major: Biochemistry
 										tr
-											td(colspan='3')
-												a(href='http://www.twitter.com/atwitter')@atwitter
-
+											td 
+												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
+										
 
 				dd.accordion-navigation
 					a(href="#panel2") Past Members
