--- a/people.jade
+++ b/people.jade
@@ -29,7 +29,7 @@ block content
 										tr
 											td Class of 2018
 										tr
-											td Major: Biochemistry
+											td Major: Chemistry
 										tr
 											td Minor: Mathematics
 										tr
@@ -43,7 +43,7 @@ block content
 									img(src= imgdir+'UnknownStudent.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Jackie Long
-									p This is a description that Jackie will write.
+									p 
 									table.vcard
 										tr
 											td Class of 2016
