--- a/NavBar.jade
+++ b/NavBar.jade
@@ -9,7 +9,7 @@
 .row
 	.large-12.columns
 		.show-for-medium-up
-			ul.button-group.even-4.radius
+			ul.button-group.even-4.radius.navgroup
 				li
 					if pageid == "research"
 						a.small.navbutton.disabled
@@ -48,7 +48,7 @@
 							| Kyle Broaders
 
 		.hide-for-medium-up
-			ul.button-group.even-4
+			ul.button-group.even-4.navgroup
 				
 				li
 					if pageid == "research"
