--- a/index.jade
+++ b/index.jade
@@ -28,7 +28,10 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
-								td Jan.&nbsp;'14
+								td May.&nbsp;'15
+								td Areeb and Jackie join the group &ndash; welcome!
+							tr
+								td Jan.&nbsp;'15
 								td Kyle is selected as the first recipient of the Mount Holyoke College Fund the Future Award!  
 							tr
 								td Sep.&nbsp;'14
