--- a/research.jade
+++ b/research.jade
@@ -20,5 +20,5 @@ block content
 				.row
 					.large-6.columns.large-offset-1.resimg
 						img(src=imgdir+'multicellularity.png')
-					.large-4.columns.large-pull-1
+					.medium-pull-1.medium-10.large-4.columns.large-pull-1
 						p The process of tumorigenesis (top) can be very broadly conceptualized as a loss of multicellular behavior. Cells whose positions and roles were strictly defined and controlled become undifferentiated and start growing unrestrictedly. This transition is in some ways mirrored by the development of the slime mold Dictyostelium discoideum (bottom). This unusual organism makes the transition from unicellular to multicellular state during its normal life cycle. Using this unlikely model, we hope to learn more about how eukaryotic cells cooperate.
