--- a/layout.jade
+++ b/layout.jade
@@ -3,6 +3,7 @@ html.no-js(lang='en')
 	head
 		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		meta(name='format-detection' content='telephone=no')
 		block title
 		link(rel='stylesheet', href='stylesheets/app.css')
 		link(rel='icon', type='image/x-icon', href='favicon.ico')
@@ -13,3 +14,11 @@ html.no-js(lang='en')
 		include NavBar
 		block content
 		script(src='js/app.min.js')
+		script.
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			
+			ga('create', 'UA-62643104-1', 'auto');
+			ga('send', 'pageview');
