--- a/people.jade
+++ b/people.jade
@@ -40,15 +40,17 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'UnknownStudent.jpg')
+									img(src= imgdir+'long24j.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Jackie Long
-									p 
+									p Jackie hails from Pennsylvania with a palate for all things exotic and an fascination with all things microscopic. Throughout her time at Mount Holyoke, she has developed a fondness for romance languages, but her real passion remains in the sciences. She is interested in the mechanisms of cellular motion.
 									table.vcard
 										tr
 											td Class of 2016
 										tr
 											td Major: Biochemistry
+										tr
+											td Minor: Statistics
 										tr
 											td 
 												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
