Added Kristyn to people and news

--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ block vars
 	-var pageid = "home"
 
 block title
-	title Broaders Lab!
+	title Broaders Lab
 	meta(name='description',content='Official lab website for Kyle Broaders and his lab at Mount Holyoke College in western MA.')
 
 block content
@@ -27,6 +27,9 @@ block content
 				.row
 					.medium-11.medium-centered.columns
 						table.newslist
+							tr
+								td Sept.&nbsp;'15
+								td Kristyn joins the lab &ndash; welcome!
 							tr
 								td May.&nbsp;'15
 								td Areeb and Jackie join the group &ndash; welcome!
