--- a/people.jade
+++ b/people.jade
@@ -54,6 +54,22 @@ block content
 										tr
 											td 
 												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
+
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'norri22k.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Kristyn Norris
+									p Kristyn is a transfer student from Three Rivers Community College, in Norwich, CT. She has a wide scope of interest in the science field but hopes to end up studying immunology in grad school and the future.  In her spare time Kristyn enjoys playing rugby as well as being involved in a variety of other originations.
+									table.vcard
+										tr
+											td Class of 2016
+										tr
+											td Major: Biochemistry
+										tr
+											td 
+												a(href='mailto:norri22k@mtholyoke.edu') norri22k@mtholyoke.edu
 										
 
 				dd.accordion-navigation
