Added appliation, updated KB page, small fixes to members

--- a/people.jade
+++ b/people.jade
@@ -15,7 +15,7 @@ block content
 
 			dl.accordion(data-accordion="")
 				dd.accordion-navigation.active
-					a(href="#panel1") Current Members
+					a(href="#panel1") &#9654; Current Members
 					#panel1.content.active(style="display:block")
 
 						.panel.radius
@@ -61,7 +61,7 @@ block content
 									img(src= imgdir+'norri22k.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Kristyn Norris
-									p Kristyn is a transfer student from Three Rivers Community College, in Norwich, CT. She has a wide scope of interest in the science field but hopes to end up studying immunology in grad school and the future.  In her spare time Kristyn enjoys playing rugby as well as being involved in a variety of other originations.
+									p Kristyn is a transfer student from Three Rivers Community College, in Norwich, CT. She has a wide scope of interest in the science field but hopes to end up studying immunology in grad school and the future.  In her spare time Kristyn enjoys playing rugby as well as being involved in a variety of other organizations.
 									table.vcard
 										tr
 											td Class of 2016
@@ -73,7 +73,7 @@ block content
 										
 
 				dd.accordion-navigation
-					a(href="#panel2") Past Members
+					a(href="#panel2") &#9654; Past Members
 					#panel2.content
 						.panel.radius
 							p There are no past members yet!
