--- a/publications.jade
+++ b/publications.jade
@@ -98,6 +98,12 @@ block content
 	-publist[12].datepage = "2015, 112, 2287-2292"
 	-publist[12].doi = "10.1073/pnas.1410776112"
 
+	-publist.push({"title":"Coupling between apical contractility and basal adhesion allow epithelia to collectively sense and respond to substrate topography over long distances."})
+	-publist[13].authors = "K.E. Broaders, A.E. Cerchiari, Z.J. Gartner"
+	-publist[13].journal = "Integr. Biol."
+	-publist[13].datepage = "2015, Accepted manuscript."
+	-publist[13].doi = "10.1039/C5IB00240K"
+
 	-var publistRev = publist.reverse()
 	.row
 		.large-12.columns
