--- a/layout.jade
+++ b/layout.jade
@@ -13,6 +13,12 @@ html.no-js(lang='en')
 		block vars
 		include NavBar
 		block content
+		unless pageid == "opportunities"
+			.row
+				.large-12.columns
+					.footer
+							a(href='opportunities.html') Interested in joining? Click here to find out more!
+
 		script(src='js/app.min.js')
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
