Updated toggles to rotate on click with CSS trickery.

--- a/people.jade
+++ b/people.jade
@@ -15,7 +15,7 @@ block content
 
 			dl.accordion(data-accordion="")
 				dd.accordion-navigation.active
-					a(href="#panel1") &#9654; Current Members
+					a(href="#panel1") Current Members
 					#panel1.content.active(style="display:block")
 
 						.panel.radius
@@ -73,7 +73,7 @@ block content
 										
 
 				dd.accordion-navigation
-					a(href="#panel2") &#9654; Past Members
+					a(href="#panel2") Past Members
 					#panel2.content
 						.panel.radius
 							p There are no past members yet!
