Added profiles for Annabelle and Aiza. Fixed opportunities link/button.

--- a/layout.jade
+++ b/layout.jade
@@ -16,8 +16,8 @@ html.no-js(lang='en')
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					.footer
-							a(href='opportunities.html') Interested in joining? Click here to find out more!
+					a.footer(href='opportunities.html')
+							| Interested in joining? Click here to find out more!
 
 		script(src='js/app.min.js')
 		script.
