--- a/people.jade
+++ b/people.jade
@@ -71,6 +71,41 @@ block content
 											td 
 												a(href='mailto:norri22k@mtholyoke.edu') norri22k@mtholyoke.edu
 										
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'ooi22y.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Annabelle Ooi
+									p Annabelle hails from Kuala Lumpur, Malaysia. She is interested in using both biochemical and molecular genetics approaches to study the biological basis of cellular interaction.
+									table.vcard
+										tr
+											td Class of 2017
+										tr
+											td Major: Biology
+										tr
+											td Minor: Chemistry
+										tr
+											td 
+												a(href='mailto:ooi22y@mtholyoke.edu') ooi22y@mtholyoke.edu
+
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'malik26a.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Aiza Malik
+									p Having lived in different cities in Pakistan Aiza is now settled in Rawalpindi - sister city to the capital. She's fascinated by the systematic dissection of anything whether it's sociology or chemistry but is particularly interested in the interaction between material properties and life.
+									table.vcard
+										tr
+											td Class of 2018
+										tr
+											td Major: Chemistry
+										tr
+											td Major: Biology
+										tr
+											td 
+												a(href='mailto:malik26a@mtholyoke.edu') malik26a@mtholyoke.edu
 
 				dd.accordion-navigation
 					a(href="#panel2") Past Members
