--- a/index.jade
+++ b/index.jade
@@ -28,11 +28,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Jan.&nbsp;'16
+								td Annabelle and Aiza join the lab &ndash; welcome!
+							tr
 								td Sep.&nbsp;'15
-								td Kristyn joins the lab &ndash; welcome!
+								td Kristyn joins the lab!
 							tr
 								td May.&nbsp;'15
-								td Areeb and Jackie join the group &ndash; welcome!
+								td Areeb and Jackie join the group!
 							tr
 								td Jan.&nbsp;'15
 								td Kyle is selected as the first recipient of the Mount Holyoke College Fund the Future Award!  
