--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -56,7 +56,7 @@
 
 // We use these as default colors throughout
  $primary-color: #137ABB;
-// $secondary-color: #e7e7e7;
+ $secondary-color: #A10808;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
