--- a/people.jade
+++ b/people.jade
@@ -24,52 +24,19 @@ block content
 									img(src= imgdir+'khich22m.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Muhammadaha Areeb Khichi
-									p Areeb comes to Mount Holyoke from Lahore, Pakistan. She is researching new biocompatible polymer formulations.
-									table.vcard
-										tr
-											td Class of 2018
-										tr
-											td Major: Chemistry
-										tr
-											td Minor: Mathematics
-										tr
-											td
-												a(href='mailto:khich22m@mtholyoke.edu') khich22m@mtholyoke.edu
+									.bio
+										p Areeb comes to Mount Holyoke from Lahore, Pakistan. She is researching new biocompatible polymer formulations.
+										table.vcard
+											tr
+												td Class of 2018
+											tr
+												td Major: Chemistry
+											tr
+												td Minor: Mathematics
+											tr
+												td
+													a(href='mailto:khich22m@mtholyoke.edu') khich22m@mtholyoke.edu
 
-
-						.panel.radius
-							.row
-								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'long24j.jpg')
-								.medium-8.medium-pull-4.columns
-									h4 Jackie Long
-									p Jackie hails from Pennsylvania with a palate for all things exotic and an fascination with all things microscopic. Throughout her time at Mount Holyoke, she has developed a fondness for romance languages, but her real passion remains in the sciences. She is interested in the mechanisms of cellular motion.
-									table.vcard
-										tr
-											td Class of 2016
-										tr
-											td Major: Biochemistry
-										tr
-											td Minor: Statistics
-										tr
-											td 
-												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
-
-						.panel.radius
-							.row
-								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'norri22k.jpg')
-								.medium-8.medium-pull-4.columns
-									h4 Kristyn Norris
-									p Kristyn is a transfer student from Three Rivers Community College, in Norwich, CT. She has a wide scope of interest in the science field but hopes to end up studying immunology in grad school and the future.  In her spare time Kristyn enjoys playing rugby as well as being involved in a variety of other organizations.
-									table.vcard
-										tr
-											td Class of 2016
-										tr
-											td Major: Biochemistry
-										tr
-											td 
-												a(href='mailto:norri22k@mtholyoke.edu') norri22k@mtholyoke.edu
 										
 						.panel.radius
 							.row
@@ -110,5 +77,39 @@ block content
 				dd.accordion-navigation
 					a(href="#panel2") Past Members
 					#panel2.content
+
 						.panel.radius
-							p There are no past members yet!
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'norri22k.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Kristyn Norris
+									p Kristyn is currently a graduate student in the immunology program at UMass Worcester.
+									table.vcard
+										tr
+											td Class of 2016
+										tr
+											td Major: Biochemistry
+										tr
+											td 
+												a(href='mailto:norri22k@mtholyoke.edu') norri22k@mtholyoke.edu
+
+
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'long24j.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Jackie Long
+									p 
+									table.vcard
+										tr
+											td Class of 2016
+										tr
+											td Major: Biochemistry
+										tr
+											td Minor: Statistics
+										tr
+											td 
+												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
+						
