--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,9 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td May.&nbsp;'16
+								td Kristyn and Jackie graduate &ndash; congratulations!
+							tr
 								td Jan.&nbsp;'16
 								td Annabelle and Aiza join the lab &ndash; welcome!
 							tr
@@ -28,9 +31,3 @@ block content
 							tr
 								td Jan.&nbsp;'15
 								td Kyle is selected as the first recipient of the Mount Holyoke College Fund the Future Award!  
-							tr
-								td Sep.&nbsp;'14
-								td First equipment purchased and assembled! The lab #[a(href="http://b9creator.com", target="_blank") 3D printer] awaits its first test run.
-							tr
-								td July&nbsp;'14
-								td Ribbon cutting ceremony for Broaders Lab! (In reality, this involved making sure the doors worked and then  dumping some boxes on the counter).
