--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -55,7 +55,7 @@
 // $default-float: left;
 
 // We use these as default colors throughout
- $primary-color: #137ABB;
+ $primary-color: #2255EE;
  $secondary-color: #A10808;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -128,7 +128,7 @@
 
 // We use these to control header font sizes
  $h1-font-size: 4.5rem;
-// $h2-font-size: rem-calc(37);
+ $h2-font-size: 3.75rem;
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
