Added PDF reprints

--- a/NavBar.jade
+++ b/NavBar.jade
@@ -5,14 +5,14 @@
 				.homelogo
 					a.disabled
 						.show-for-medium-up
-							h1 Broaders Lab
+							h1 — Broaders Lab —
 						.hide-for-medium-up
 							h2 Broaders Lab
 			else
 				.homelogo
 					a(href='index.html')
 						.show-for-medium-up
-							h1 Broaders Lab
+							h1 — Broaders Lab —
 						.hide-for-medium-up
 							h2 Broaders Lab
 		.navbottom
