Added research summary on index and updated research page

--- a/index.jade
+++ b/index.jade
@@ -8,10 +8,10 @@ block title
 	meta(name='description',content='Official lab website for Kyle Broaders and his lab at Mount Holyoke College in western MA.')
 
 block content
+	-var imgdir = "images/"
 	.row
 		.large-12.columns
 			.panel
-
 				h4 News
 				.row
 					.medium-11.medium-centered.columns
