--- a/kb.jade
+++ b/kb.jade
@@ -59,7 +59,7 @@ block content
 								td 
 									a(href='http://www.gartnerlab.ucsf.edu/') Zev Gartner
 						h5 Interests
-						p Throughout his studies, Kyle has focused on the interplay between living tissues and their material world. He is interested in using controllable synthetic and polymer chemistry to better understand the relationship between cells and their surroundings. 
+						p Throughout his career, Kyle has focused on the interplay between living tissues and their material world. He uses controllable synthetic and polymer chemistry to better understand the relationship between cells and their surroundings. 
 						dl.accordion(data-accordion="")
 							dd.accordion-navigation-research
 								a(href="#panel1").pastresearch Undergraduate Research
