--- a/layout.jade
+++ b/layout.jade
@@ -17,7 +17,7 @@ html.no-js(lang='en')
 			.row
 				.large-12.columns
 					a.footer(href='opportunities.html')
-							| Interested in joining? Click here to find out more!
+							| Interested&nbsp;in&nbsp;joining? Click&nbsp;here&nbsp;to&nbsp;find&nbsp;out&nbsp;more!
 
 		script(src='js/app.min.js')
 		script.
