--- a/NavBar.jade
+++ b/NavBar.jade
@@ -17,6 +17,15 @@
 							h2 Broaders Lab
 		.navbottom
 			hr
+if pageid== "home"
+	.row
+		.large-12.columns.text-center
+			.show-for-medium-up
+				img(src= 'images/cycle.jpg')
+			.hide-for-medium-up
+				img(src= 'images/cycleSmall.jpg')
+			.navimgbottom
+				hr
 .row
 	.large-12.columns
 		.show-for-medium-up.text-center
