--- a/research.jade
+++ b/research.jade
@@ -11,25 +11,22 @@ block content
 	-var imgdir = "images/res/"
 	.row
 		.large-12.columns
-			.panel
-				h3 Research
-				p The Broaders Lab is focused on learning more about how living cells sense and respond to their surroundings. Particularly, research is focused on disecting the ways that cells respond to the shape and chemical nature of their underlying substrata. How do these responses change between cells in isolation and cells acting as a tissue? The Broaders lab uses chemical tools to prepare precisely controlled environments that will help to answer these questions. The lessons learned from this research may reveal new insight into how multicellular organisms develop and help us to understand the rules for how cells sense, interact with, and respond to their material world. 
+			.panel#researchbox
+				.show-for-medium-up
+					h3 The interface of materials chemistry and biology
+				.show-for-small-only
+					h3 The interface of materials chemistry and biology
 				.row
-					.medium-6.columns
-						img(src=imgdir+'multicellularity.png')
-					.medium-6.columns
-						p The process of tumorigenesis (top) can be very broadly conceptualized as a loss of multicellular behavior. Cells whose positions and roles were strictly defined and controlled become undifferentiated and start growing unrestrictedly. This transition is in some ways mirrored by the development of the slime mold Dictyostelium discoideum (bottom). This unusual organism makes the transition from unicellular to multicellular state during its normal life cycle. Using this unlikely model, we hope to learn more about how eukaryotic cells cooperate.
-				hr
+					.large-12.columns.text-center
+						.show-for-medium-up
+							img(src= 'images/cycle.jpg')
+						.hide-for-medium-up
+							img(src= 'images/cycleSmall.jpg')
 				.row
-					.large-12.columns
-						h5 Striking images from past research
-						ul.example-orbit(data-orbit='data-orbit', data-options='	bullets:false;timer:false;slide_number:false;')
-							li
-								img(src='images/orbit1.jpg', alt='slide 1')
-								.orbit-caption Dextran-based degradable nanoparticles for protein delivery
-							li
-								img(src='images/orbit2.jpg', alt='slide 2')
-								.orbit-caption Immunofluorescently stained mammalian cells grown on 3D shapes.
-							li
-								img(src='images/orbit3.jpg', alt='slide 3')
-								.orbit-caption Contact angles between cells indicate strength of cohesion.
+					.large-6.columns
+						h4 Materials for influencing biology
+						p Designing materials to interact with biological systems presents an interesting challenge because there is often only a very small difference between environments. Even the largest differences like the relative aicity of the cytosol compared to the lysosome are only on the order of hundred-fold changes. We working to desigin materials that can respond to these subtle changes in a nonlinear fashion with can changes their properties such as size, solubility, or chemical structure. These materials may find use in theraputic and diagnostic medical applications.  
+					.large-6.columns
+						h4 Materials for understanding biology
+						p We are interested in learning more about how living cells sense and respond to their surroundings. How do cells respond to the shape and chemical nature of their underlying substrata? How do these responses change between cells in isolation and cells acting as a collective unit? Our group uses chemical tools to prepare precisely controlled environments that will help to answer these questions. The lessons learned from this research may reveal new insight into how multicellular organisms develop and help us to understand the rules for how cells sense, interact with, and respond to their material world. 
+
