--- a/people.jade
+++ b/people.jade
@@ -112,4 +112,8 @@ block content
 										tr
 											td 
 												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
-						
+				.row
+					.large-12.columns
+						.panel
+							h4 Where we're from:
+							iframe(src="https://www.google.com/maps/d/u/1/embed?mid=1FO7Hhr06G513SwHSnJDyo84bnac" width="100%" height="400")
