--- a/people.jade
+++ b/people.jade
@@ -116,4 +116,4 @@ block content
 					.large-12.columns
 						.panel
 							h4 Where we're from:
-							iframe(src="https://www.google.com/maps/d/u/1/embed?mid=1FO7Hhr06G513SwHSnJDyo84bnac" width="100%" height="400")
+							iframe(src="https://www.google.com/maps/d/u/1/embed?mid=1FO7Hhr06G513SwHSnJDyo84bnac&z=2" width="100%" height="400")
