Replaced iframe map with png and a link

--- a/people.jade
+++ b/people.jade
@@ -116,4 +116,11 @@ block content
 					.large-12.columns
 						.panel
 							h4 Where we're from:
-							iframe(src="https://www.google.com/maps/d/u/1/embed?mid=1FO7Hhr06G513SwHSnJDyo84bnac&z=2" width="100%" height="400")
+							#membermap
+								img(src= imgdir+'map.png')
+							.text-center
+								p
+									a(href='https://drive.google.com/open?id=1FO7Hhr06G513SwHSnJDyo84bnac&usp=sharing&z=2', target='_blank') 
+										| Explore the map
+											
+									
