--- a/people.jade
+++ b/people.jade
@@ -116,8 +116,8 @@ block content
 					.large-12.columns
 						.panel
 							h4 Where we're from:
-							#membermap
-								img(src= imgdir+'map.png')
+							#membermap.text-center
+								img(src= imgdir+'map.jpg')
 							.text-center
 								p
 									a(href='https://drive.google.com/open?id=1FO7Hhr06G513SwHSnJDyo84bnac&usp=sharing&z=2', target='_blank') 
