Fixed toggles (again)

--- a/kb.jade
+++ b/kb.jade
@@ -61,12 +61,12 @@ block content
 						h5 Interests
 						p Throughout his career, Kyle has focused on the interplay between living tissues and their material world. He uses controllable synthetic and polymer chemistry to better understand the relationship between cells and their surroundings. 
 						dl.accordion(data-accordion="")
-							dd.accordion-navigation-research
+							dd.accordion-navigation
 								a(href="#panel1").pastresearch Undergraduate Research
 								#panel1.content
 									img.fig(src= imgdir+'atropisomers.gif')
 									p.desc During his undergraduate research he synthesized and characterized a new class of non-biaryl compound posessing a sp2 C-C axis of asymmetry. This kind axial asymmetry is known as atropisomerism when it is caused by hindered rotation around a single bond, and is known in catalysts like BINAP and SEGPHOS. 
-							dd.accordion-navigation-research
+							dd.accordion-navigation
 								a(href="#panel2") Graduate Research
 								#panel2.content
 									img.fig(src= imgdir+'AcDex.png')
@@ -77,7 +77,7 @@ block content
 									hr
 									img.fig(src= imgdir+'capsules.png')
 									p.desc He developed a system for drug delivery that featured all-or-nothing burst release kinetics. Capsules with impermeable walls could be stored indefinitely until exposed to even mildly acidic conditions, which would erode the walls and cause rupture.
-							dd.accordion-navigation-research
+							dd.accordion-navigation
 								a(href="#panel3") Postdoctoral Research
 								#panel3.content
 									img.fig(src= imgdir+'topography.png')
