Updated members and optimized images.

--- a/people.jade
+++ b/people.jade
@@ -17,26 +17,6 @@ block content
 				dd.accordion-navigation.active
 					a(href="#panel1") Current Members
 					#panel1.content.active(style="display:block")
-
-						.panel.radius
-							.row
-								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'khich22m.jpg')
-								.medium-8.medium-pull-4.columns
-									h4 Muhammadaha Areeb Khichi
-									.bio
-										p Areeb comes to Mount Holyoke from Lahore, Pakistan. She is researching new biocompatible polymer formulations.
-										table.vcard
-											tr
-												td Class of 2018
-											tr
-												td Major: Chemistry
-											tr
-												td Minor: Mathematics
-											tr
-												td
-													a(href='mailto:khich22m@mtholyoke.edu') khich22m@mtholyoke.edu
-
 										
 						.panel.radius
 							.row
@@ -81,6 +61,21 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'khich22m.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Muhammadaha Areeb Khichi
+									p Areeb is currently working in the Rotello lab at UMass Amherst.
+									table.vcard
+										tr
+											td Class of 2018
+										tr
+											td Major: Chemistry
+										tr
+											td Minor: Mathematics
+
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
 									img(src= imgdir+'norri22k.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Kristyn Norris
@@ -90,9 +85,7 @@ block content
 											td Class of 2016
 										tr
 											td Major: Biochemistry
-										tr
-											td 
-												a(href='mailto:norri22k@mtholyoke.edu') norri22k@mtholyoke.edu
+
 
 
 						.panel.radius
@@ -109,9 +102,7 @@ block content
 											td Major: Biochemistry
 										tr
 											td Minor: Statistics
-										tr
-											td 
-												a(href='mailto:long24j@mtholyoke.edu') long24j@mtholyoke.edu
+
 				.row
 					.large-12.columns
 						.panel
