Added new member placeholders. Small style tweak.

--- a/people.jade
+++ b/people.jade
@@ -53,6 +53,55 @@ block content
 										tr
 											td 
 												a(href='mailto:malik26a@mtholyoke.edu') malik26a@mtholyoke.edu
+										
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'UnknownStudent.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Emily Graham
+									p Emily is an enigma.
+									table.vcard
+										tr
+											td Class of 2019
+										tr
+											td Major: ?
+										tr
+											td 
+												a(href='mailto:graha22e@mtholyoke.edu') graha22e@mtholyoke.edu
+
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'UnknownStudent.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Yeonsoo Kum
+									p Yeonsoo is yet unknown. 
+									table.vcard
+										tr
+											td Class of 2019
+										tr
+											td Major: ?
+										tr
+											td 
+												a(href='mailto:kum22y@mtholyoke.edu') kum22y@mtholyoke.edu
+												
+						.panel.radius
+							.row
+								.headshot.medium-4.medium-push-8.columns
+									img(src= imgdir+'UnknownStudent.jpg')
+								.medium-8.medium-pull-4.columns
+									h4 Beth Yigzaw
+									p Beth is beyond our knowledge.
+									table.vcard
+										tr
+											td Class of 2019
+										tr
+											td Major: ?
+										tr
+											td 
+												a(href='mailto:yigza22b@mtholyoke.edu') yigza22b@mtholyoke.edu
+
 
 				dd.accordion-navigation
 					a(href="#panel2") Past Members
