--- a/scss/app.scss
+++ b/scss/app.scss
@@ -233,7 +233,7 @@ dd.accordion-navigation{
 
 .accordion-navigation {
 	padding-bottom:0.5rem !important;
-	a {
+	>a {
 		padding:0.7rem !important;
 	}
   >a:after {
