Added new members

--- a/people.jade
+++ b/people.jade
@@ -57,15 +57,17 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'UnknownStudent.jpg')
+									img(src= imgdir+'graha22e.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Emily Graham
-									p Emily is an enigma.
+									p Emily is from Salt Lake City, Utah. She is interested in the design and synthesis of chemical materials and the relationship of these with biological functions.
 									table.vcard
 										tr
 											td Class of 2019
 										tr
-											td Major: ?
+											td Major: Chemistry
+										tr
+											td Nexus: Engineering
 										tr
 											td 
 												a(href='mailto:graha22e@mtholyoke.edu') graha22e@mtholyoke.edu
@@ -73,15 +75,17 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'UnknownStudent.jpg')
+									img(src= imgdir+'kum22y.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Yeonsoo Kum
-									p Yeonsoo is yet unknown. 
+									p Yeonsoo was born in Seoul, South Korea, and moved to Tenafly, NJ. She is interested in synthesizing organic molecules via biochemical methods and understanding the synthesis in molecular level. 
 									table.vcard
 										tr
 											td Class of 2019
 										tr
-											td Major: ?
+											td Major: Chemistry
+										tr
+											td Minor: Biology
 										tr
 											td 
 												a(href='mailto:kum22y@mtholyoke.edu') kum22y@mtholyoke.edu
@@ -89,15 +93,15 @@ block content
 						.panel.radius
 							.row
 								.headshot.medium-4.medium-push-8.columns
-									img(src= imgdir+'UnknownStudent.jpg')
+									img(src= imgdir+'yigza22b.jpg')
 								.medium-8.medium-pull-4.columns
 									h4 Beth Yigzaw
-									p Beth is beyond our knowledge.
+									p Beth is originally from Ethiopia and currently calls DC area home. She's fascinated by the effects of newly synthesized molecules on animal cells.
 									table.vcard
 										tr
 											td Class of 2019
 										tr
-											td Major: ?
+											td Major: Biochemistry
 										tr
 											td 
 												a(href='mailto:yigza22b@mtholyoke.edu') yigza22b@mtholyoke.edu
